XForms bug 301571 - support mailto: submissions. r=aaronr,smaug